--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,20 +1,96 @@
-/* Define the "system" font family */
-/*
-@font-face {
-  font-family: system;
-  font-style: normal;
-  font-weight: 300;
-  src: local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"), local("Ubuntu Light"), local("Segoe UI Light"), local("Roboto-Light"), local("DroidSans"), local("Tahoma");
-}
-*/
-
-/* Now, let's apply it on an element */
-/*
 body {
-  font-family: "system";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  max-width: 1400px;
+  margin: auto;
+  padding: 0 5em 0;
 }
-*/
 
-body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  }
+header {
+  padding: 10px 10px 0;
+}
+
+#cabecera {
+  background: lightcoral;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+#titulo {
+  text-align: center;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: auto;
+  padding: 0;
+  overflow: hidden;
+}
+
+header ul li {
+    float: left;
+}
+
+header ul li a {
+  display: block;
+  text-align: center;
+  padding: 20px;
+  text-decoration: none;
+  color: black;
+}
+
+header ul li:hover {
+  background-color: #4A306D;
+}
+
+header ul li a:hover {
+  color:white;
+}
+
+h1:not(#titulo){
+  margin-top: 0;
+}
+
+div.contenido {
+  padding: 50px 20px 50px;
+  margin-top: -4px;
+}
+
+#ramos {
+  background-color: #0E273C;
+  color: white;
+}
+
+#ramos a{
+  color: lightblue;
+}
+
+#background {
+  background-color: #D0FCB3;
+}
+
+#background img {
+  max-width: 100%;
+  max-height: auto;
+}
+
+footer {
+  min-height: 100px;
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding-top: 10px;
+}
+
+
+hr {
+  padding: 0;
+  margin: 0;
+}
+
+#info-personal {
+  display: flex;
+}
+
+#perfil {
+  max-width: 300px;
+}
